# memilio-simulations

./: 2020_npis_sarscov2_wildtype_germany.cpp  CMakeLists.txt  README.md
2020_npis_sarscov2_wildtype_germany/: CMakeLists.txt  README.md
2021_Kuehn_et_al_Assessment_NPIs_Spatial/: CMakeLists.txt  README.md  data_generation.sh  git_tag.cmake
2021_vaccination_sarscov2_delta_germany/: CMakeLists.txt  README.md  data_generation.sh
2022_Koslow_et_al_Appropriate_Relaxation_NPIs/: CMakeLists.txt  README.md  vaccination_sarscov2_delta_germany.cpp
2024_Ploetzke_Linear_Chain_Trick/: CMakeLists.txt  README.md  get_data_numerical_experiments.sh
2024_Ploetzke_et_al_Revisiting_Linear_Chain_Trick/: CMakeLists.txt  README.md  download_data.py  get_data_covid19_ensemble_runs.sh  get_data_covid19_inspired.sh  get_data_numerical_experiments.sh  get_runtimes_lct.sh  git_tag.cmake  lct_covid19_ensemble_runs.cpp  lct_covid19_inspired_scenario.cpp  lct_impact_age_resolution.cpp  lct_impact_distribution_assumption.cpp  lct_runtime.cpp  plot_additional_information_experiments.py  plot_covid19_inspired.py  plot_details.py  plot_ensemble_runs.py  plot_numerical_experiments.py  plot_runtimes_lct.py  plots_ensemble.py
2024_Wendler_et_al_Nonstandard_Numerical_Scheme_IDE/: CMakeLists.txt  README.md  download_reported_data.py  get_lognormal_parameters.py  git_tag.cmake  ide_changepoints.cpp  ide_convergence_rate.cpp  ide_covid_inspired_scenario.cpp  investigate_age_distribution.py  plot_changepoints.py  plot_convergence.py  run_and_plot_covid_inspired_scenario.py
2025_Kerkmann_Korf_et_al_agent_based_model_testing/: CMakeLists.txt  Readme.md  git_tag.cmake  paper_abm_bs_testing.cpp
2025_Kerkmann_Korf_et_al_agent_based_model_testing/plotting/: analyze_bs_run.py  scenario_plots.py
2025_Kerkouche_Zunker_et_al_FL_DP/: README.md  community_dp.py  county_dp.py
2025_Kerkouche_Zunker_et_al_FL_DP/data_generation/: README.md  extend_case_data.py  smooth_cases.py  transform_data_resolved.py
2025_Kerkouche_Zunker_et_al_FL_DP/plots/: figure_1.py  figure_2.py  figure_3.py  figure_4.py  figure_5_6.py
2026_Bicker_et_al_Memilio_paper/: README.md  plotting_settings.py
2026_Bicker_et_al_Memilio_paper/Fig4_b/: CMakeLists.txt  README.md  git_tag.cmake  influenza_plotting.py  plotting_helpers.py  simulation.py
2026_Bicker_et_al_Memilio_paper/Fig4_b/SimParticleFilter/: BootstrapFilter.jl  BootstrapFilter_Sim.jl  PMMH.jl  ParticleFilter.jl  ParticleFilter_Sim.jl  PosEM.jl
2026_Bicker_et_al_Memilio_paper/Fig4_b/sirs_influenza/: Manifest.toml  Project.toml  influenza_ssirs.ipynb  mem_PMMH_stochastic_influenza.jl  mem_ssirs.py  utilities.jl
2026_Bicker_et_al_Memilio_paper/Fig4_b/sirs_influenza/data/: ILI_germany_2016_2019.csv
2026_Bicker_et_al_Memilio_paper/Fig4_b/sirs_influenza/output/: joined_samples_500_out.npy
2026_Bicker_et_al_Memilio_paper/Fig4_c/: CMakeLists.txt  README.md  git_tag.cmake  plotting_helpers.py  requirements.txt  seirdb_plotting.py  simulation.py
2026_Bicker_et_al_Memilio_paper/Fig4_c/SimParticleFilter/: Plotting.jl  Plotting_Sim.jl  PythonSimulator.jl  ResamplingAlgorithms.jl  SimParticleFilter.jl  Test_Bootstrap.jl  Utilities_Sim.jl
2026_Bicker_et_al_Memilio_paper/Fig4_c/seirdb_ebola/: Manifest.toml  Project.toml  mem_PMMH_SEIRDB.jl  seirdb.py  seirdb_model_py.ipynb  utilities.jl
2026_Bicker_et_al_Memilio_paper/Fig4_c/seirdb_ebola/data/: early_guinea_conf_cases.csv  raw_early_data.csv
2026_Bicker_et_al_Memilio_paper/Fig4_d/: CMakeLists.txt  README.md  git_tag.cmake  graph_germany_nuts0.py  graph_germany_nuts3.py  graph_spain_nuts0.py
2026_Bicker_et_al_Memilio_paper/Fig4_d_and_e/: CMakeLists.txt  README.md  getSimulationDataSpain.py  git_tag.cmake  graph_spain_nuts3.py  install.sh  requirements.txt  run_fitting.sh
2026_Bicker_et_al_Memilio_paper/Fig4_f_and_i/: CMakeLists.txt  README.md  graph_germany_nuts3_ode.cpp  nuts3_process_contacts.py
2026_Bicker_et_al_Memilio_paper/Fig4_f_g_and_i/: CMakeLists.txt  README.md  graph_germany_nuts3_ode.cpp  nuts3_process_contacts.py
2026_Bicker_et_al_Memilio_paper/Fig4_g_and_h/: CMakeLists.txt  README.md  opt_model.h  opt_scenario.cpp
2026_Bicker_et_al_Memilio_paper/Fig4_h/: CMakeLists.txt  README.md  git_tag.cmake  install.sh  opt_model.h  plot_results.py  requirements.txt
2026_Bicker_et_al_Memilio_paper/Fig5/: CMakeLists.txt  README.md
2026_Bicker_et_al_Memilio_paper/Fig6_a/: CMakeLists.txt  README.md  benchmark_seir_metapop_R_explicit_euler.R  benchmark_seir_metapop_R_rk4.R  git_tag.cmake  ode_seir_metapop_benchmark.cpp  ode_seir_metapop_benchmark.py  plot_speedup_seir_metapop.py
2026_Bicker_et_al_Memilio_paper/Fig6_b/: CMakeLists.txt  README.md  ide_runtime.cpp  lct_runtime.cpp  ode_runtime.cpp
2026_Bicker_et_al_Memilio_paper/Fig6_b_and_f/: CMakeLists.txt  README.md  experimental-simulations-memilio-paper.patch  get_ensemble_runs.sh  git_tag.cmake  ide_ensemble_runs.cpp  ide_runtime.cpp  install.sh  lct_ensemble_runs.cpp  lct_runtime.cpp  ode_ensemble_runs.cpp  ode_runtime.cpp
2026_Bicker_et_al_Memilio_paper/Fig6_c_and_f/: CMakeLists.txt  README.md  git_tag.cmake  mpi-abm-bm.patch
2026_Bicker_et_al_Memilio_paper/Fig6_d/: CMakeLists.txt  README.md  git_tag.cmake  paper-compare-abm-ide-lct-ode.patch
2026_Bicker_et_al_Memilio_paper/Fig6_e/: CMakeLists.txt  README.md  git_tag.cmake  gnn_graph_ode_comparison.py  install.sh  measure_gnn_graphODE_runtime.py  plot_6e.py  requirements.txt
2026_Bicker_et_al_Memilio_paper/Fig6_e/GNN/: data_generation.py  evaluate_and_train.py  grid_search.py
2026_Bicker_et_al_Memilio_paper/Fig6_f/: README.md
2026_Zunker_et_al_Metapopulation_lagrangian/: CMakeLists.txt  README.md  git_tag.cmake  plot_figure_3.py  plot_figure_4.py  plot_figure_5.py  plot_figure_6.py
munich_graph_sim/: CMakeLists.txt  README.md  munich_graph_sim.cpp
